Fixed the spacing on the scrolling animation

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,37 +10,36 @@ TODO: play with weight and style params */
 html {
   font-size: 25px;
   font-family: 'Share Tech Mono', monospace;
-  background: rgb(255, 255, 255);
+  background: rgb(141, 181, 193);
 }
 
-body{
-  margin: 2% 5% 5% 5%;
+.bodystyle{
+  margin: 2% 2% 2% 2%;
   padding: 2% 2%;
-  background-color: rgb(223, 223, 223);
+  background-color: rgb(165, 180, 181);
   box-sizing: border-box;
 
-  
-
+  border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
 
-  box-shadow: 0 0 2% rgba(0,0,0,0.1);
+  box-shadow: 0 40px 80px 0 rgba(0, 0, 0, 1), 0 60px 200px 0 rgba(1, 0, 0, 0.5);
 }
 
 .logo-header img {
   float: left;
-  width: 12%;
-  background: rgb(223, 223, 223);
+  height: max(8vh,8vw);
+  width: auto;;
+  background: rgb(165, 180, 181);
 }
 
 .logo-header h1 {
   position: relative;
-  top: 10px;
   font-size: 60px;
   text-align: center;
   margin: 0;
-  padding: 20px 0;
+  padding: 0 0;
   color: #156082;
   text-shadow: 3px 3px 1px black;
 }
@@ -56,11 +55,22 @@ https://www.smashingmagazine.com/2024/04/infinite-scrolling-logos-html-css/ */
 
 
 .marquee {
+
+  /* variables to control the animation */
+
+  --marquee-item-width: min(25vh, 25vw);
+  --marquee-item-height: min(25vh, 25vw);
+  --marquee-duration: 60s;
+
+  /* This offset is used in the timing delays 
+   and therefore ultimately controls the image spacing. */
+  --marquee-item-offset: calc(var(--marquee-item-width) * 5.5); 
+
   display: flex;
   block-size: var(--marquee-item-height);
-  margin-block: 10px;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-block: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
   position: relative;
   overflow-x: hidden;
   mask-image: linear-gradient(
@@ -72,55 +82,43 @@ https://www.smashingmagazine.com/2024/04/infinite-scrolling-logos-html-css/ */
   );
 }
 
-.marquee--6 {
-  --marquee-item-width: 800px;
-  --marquee-item-height: 400px;
-  --marquee-duration: 40s;
-}
-
 .marquee__item {
-  --marquee-item-offset: max(
-    2400px, /* width of all items */
-    calc(100% + 800px)
-  );
+  
   position: absolute;
   inset-inline-start: var(--marquee-item-offset);
-  transform: translateX(-50%);
+  
   animation: go linear var(--marquee-duration) var(--marquee-delay, 0s) infinite;
 
+  width: var(--marquee-item-width);
+  aspect-ratio: 1 / 1;
+  
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
 }
 
-.marquee--6 .marquee__item:nth-of-type(1) {
+.marquee__item:nth-of-type(1) {
   --marquee-delay: calc(var(--marquee-duration) * 0.16667 * 1 * -1);
-  --marquee-item-width: 400px;
 }
 
-.marquee--6 .marquee__item:nth-of-type(2) {
+.marquee__item:nth-of-type(2) {
   --marquee-delay: calc(var(--marquee-duration) * 0.16667 * 2 * -1);
-  --marquee-item-width: 400px;
 }
 
-.marquee--6 .marquee__item:nth-of-type(3) {
+.marquee__item:nth-of-type(3) {
   --marquee-delay: calc(var(--marquee-duration) * 0.16667 * 3 * -1);
-  --marquee-item-width: 400px;
 }
 
-.marquee--6 .marquee__item:nth-of-type(4) {
+.marquee__item:nth-of-type(4) {
   --marquee-delay: calc(var(--marquee-duration) * 0.16667 * 4 * -1);
-  --marquee-item-width: 400px;
 }
 
-.marquee--6 .marquee__item:nth-of-type(5) {
+.marquee__item:nth-of-type(5) {
   --marquee-delay: calc(var(--marquee-duration) * 0.16667 * 5 * -1);
-  --marquee-item-width: 400px;
 }
 
-.marquee--6 .marquee__item:nth-of-type(6) {
+.marquee__item:nth-of-type(6) {
   --marquee-delay: calc(var(--marquee-duration) * 0.16667 * 6 * -1);
-  --marquee-item-width: 400px;
 }
 
 @keyframes go {
@@ -133,7 +131,7 @@ https://www.smashingmagazine.com/2024/04/infinite-scrolling-logos-html-css/ */
 
 p, li {
   color: rgb(32, 32, 32);
-  font-size: 16px;
-  line-height: 2;
+  font-size: 20px;
+  line-height: 1.5;
   letter-spacing: 1px;
 }
